--- a/templates/adminer/base.html
+++ b/templates/adminer/base.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="{% url 'adminer:home' %}">Опросы <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" data-name="pattern">
-                <a class="nav-link" href="{% url 'adminer:pattern' %}">Шаблоны <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'adminer:pattern' %}">Шаблоны анкет <span class="sr-only">(current)</span></a>
             </li>
             {% comment %}<li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
