--- a/templates/adminer/pattern_edit.html
+++ b/templates/adminer/pattern_edit.html
@@ -10,44 +10,72 @@
     <div class="d-flex">
         <div class="mx-auto" style="width: 50%">
             <br>
-            <h1 class="text-center">Изменение шаблона #{{ pattern.id }}</h1>
+            <h1 class="text-center">Изменение шаблона анкеты #{{ pattern.id }}</h1>
             <br>
-            <form method="post" novalidate class="mt-4" id="form_pattern_edit" url="{% url 'adminer:pattern_edit' id=pattern.id %}">
+            <form method="post" class="mt-4" id="form_pattern_edit"
+                  url="{% url 'adminer:pattern_edit' id=pattern.id %}">
                 {% csrf_token %}
 
                 <div class="form-group">
                     <input type="text" class="form-control" id="pattern_title"
-                           placeholder="Название шаблона" required value="{{ pattern.title }}">
+                           placeholder="Название шаблона анкеты" required value="{{ pattern.title }}">
                 </div>
                 <br>
 
                 {% for question in questions %}
 
-                    <div class="box" id="question_box_{{ question.id }}" data-id="{{ question.id }}">
-                        <div class="item">
-                            <div style="display: flex">
-                                <button class="btn btn-danger delete_question" data-id="{{ question.id }}"><i
-                                        class="fas fa-trash-alt"></i></button>
-                                <input type="text" class="form-control" value="{{ question.title }}"
-                                       name="question[{{ question.id }}]['title']" required>
-                            </div>
+                    <div class="box-master" id="question_box_{{ question.id }}" data-id="{{ question.id }}">
+                        <div class="form-group d-flex align-items-center">
+                            <label for="question_is_verbal_{{ question.id }}">Система оценивания вопроса</label>
+                            <select id="question_is_verbal_{{ question.id }}" class="form-control select_verbal"
+                                    data-id="{{ question.id }}" name="question[{{ question.id }}]['is_verbal']">
+                                <option value="1" {% if question.is_verbal %} selected {% endif %}>Вербальная</option>
+                                <option value="0" {% if not question.is_verbal %} selected {% endif %}>Числовая</option>
+                            </select>
                         </div>
-                        <div class="item" id="container_answer_{{ question.id }}">
-                            {% for answer in question.answers %}
-                                <div class="box_answer" id="box_answer_{{ answer.id }}" data-id="{{ answer.id }}">
-                                    <input type="text" class="form-control" value="{{ answer.title }}"
-                                           name="question[{{ question.id }}]['answer'][{{ answer.id }}]" required>
-                                    <button class="btn btn-danger answer_delete" data-id="{{ answer.id }}"
-                                            data-question="{{ question.id }}"><i class="fas fa-trash-alt"></i></button>
-                                    <br>
+                        <div class="box">
+                            <div class="item">
+                                <div style="display: flex">
+                                    <button class="btn btn-danger delete_question" data-id="{{ question.id }}"><i
+                                            class="fas fa-trash-alt"></i></button>
+                                    <input type="text" class="form-control" value="{{ question.title }}"
+                                           name="question[{{ question.id }}]['title']" required
+                                           placeholder="Введите текст вопроса">
                                 </div>
-                            {% endfor %}
+                            </div>
+                            <div class="item" id="container_answer_{{ question.id }}">
+
+                                {% if question.is_verbal %}
+                                    {% for answer in question.answers %}
+                                        <div class="box_answer" id="box_answer_{{ answer.id }}"
+                                             data-id="{{ answer.id }}">
+                                            <input type="text" class="form-control" value="{{ answer.title }}"
+                                                   name="question[{{ question.id }}]['answer'][{{ answer.id }}]"
+                                                   required placeholder="Введите текст ответа">
+                                            <button class="btn btn-danger answer_delete" data-id="{{ answer.id }}"
+                                                    data-question="{{ question.id }}"><i class="fas fa-trash-alt"></i>
+                                            </button>
+                                            <span class="cost-answer"
+                                                  id="question[{{ question.id }}]['cost'][{{ answer.id }}]">{{ answer.cost }}</span>
+                                            <br>
+                                        </div>
+                                    {% endfor %}
+                                {% else %}
+                                    <div class="box_answer" id="box_answer_{{ answer.id }}"
+                                         data-id="{{ answer.id }}">
+                                        <input type="number" required class="form-control input_number" max="100"
+                                               name="question[{{ question.id }}]['answer'][{{ answer.id }}]"
+                                               placeholder="Введите максильную оценку" value="{{ question.answers.last.title }}">
+                                        <br>
+                                    </div>
+                                {% endif %}
 
 
-                            <div class="d-flex mt-3" style="width: 87%;">
-                                <button class="btn btn-success mx-auto add_answer" data-id="{{ question.id }}">Добавить
-                                    ответ
-                                </button>
+                                <div class="d-flex mt-3" style="width: 87%;">
+                                    <button class="btn btn-success mx-auto add_answer" data-id="{{ question.id }}">
+                                        Добавить ответ
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
