--- a/templates/adminer/base.html
+++ b/templates/adminer/base.html
@@ -29,6 +29,9 @@
             <li class="nav-item" data-name="pattern">
                 <a class="nav-link" href="{% url 'adminer:pattern' %}">Шаблоны анкет <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item" data-name="category">
+                <a class="nav-link" href="{% url 'adminer:category' %}">Категории <span class="sr-only">(current)</span></a>
+            </li>
             {% comment %}<li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
