--- a/templates/adminer/pattern/pattern.html
+++ b/templates/adminer/pattern/pattern.html
@@ -23,6 +23,8 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Название</th>
+                    <th scope="col">Дата создания</th>
+                    <th scope="col">Дата обновления</th>
                     <th scope="col">Действия</th>
                 </tr>
                 </thead>
@@ -31,6 +33,8 @@
                     <tr>
                         <th scope="row">{{ pattern.id }}</th>
                         <td class="text-center">{{ pattern.title }}</td>
+                        <td class="text-center">{{ pattern.date_created|date:'Y-m-d H:i'}}</td>
+                        <td class="text-center">{{ pattern.date_update|date:'Y-m-d H:i' }}</td>
                         <td>
                             <a href="/admin/pattern/edit/{{ pattern.id }}" type="button" class="btn btn-warning"><i
                                     class="fas fa-edit"></i></a>
