--- a/templates/adminer/pattern/pattern_create.html
+++ b/templates/adminer/pattern/pattern_create.html
@@ -8,22 +8,58 @@
     <link rel="stylesheet" href="{% static 'adminer/css/edit_pattern.css' %}">
 
     <div class="d-flex">
-        <div class="mx-auto" style="width: 50%">
+        <div class="mx-auto block-window">
+            <h4>Список категорий</h4>
+            <br>
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Название</th>
+                    <th scope="col">Действия</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for category in categories %}
+                    <tr>
+                        <th scope="row">{{ category.id }}</th>
+                        <td>{{ category.title }}</td>
+                        <td>
+                            <a href="/admin/category/edit/{{ category.id }}" type="button" class="btn btn-primary" target="_blank">
+                                <i class="fas fa-external-link-alt"></i>
+                            </a>
+                            <a type="button" class="btn btn-success add_category" data-id="{{ category.id }}" id="btn_add_category_{{ category.id }}">
+                                <i class="fas fa-plus" style="color: white;"></i>
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="mx-auto" style="width: 50%;">
             <br>
             <h1 class="text-center">Создание шаблона анкеты</h1>
             <br>
             <form method="post" class="mt-4" id="form_pattern_edit" url="{% url 'adminer:pattern_create' %}">
                 {% csrf_token %}
-
                 <div class="form-group">
                     <input type="text" class="form-control" id="pattern_title"
                            placeholder="Название шаблона анкеты" required>
                 </div>
                 <br>
+                <h4>Добавление категорий</h4>
+                <div class="box-all-category">
+                    <p style="text-align: center">Категории еще не добавлены</p>
+                </div>
+                <br>
+                <h4>Добавление вопросов</h4>
                 <div class="box-master" id="question_box_1" data-id="1">
                     <div class="form-group d-flex align-items-center">
                         <label for="question_is_verbal_1">Система оценивания вопроса</label>
-                        <select id="question_is_verbal_1" class="form-control select_verbal" data-id="1" name="question[1]['is_verbal']">
+                        <select id="question_is_verbal_1" class="form-control select_verbal" data-id="1"
+                                name="question[1]['is_verbal']">
                             <option value="1">Вербальная</option>
                             <option value="0">Числовая</option>
                         </select>
@@ -33,7 +69,8 @@
                             <div style="display: flex">
                                 <button class="btn btn-danger delete_question" data-id="1"><i
                                         class="fas fa-trash-alt"></i></button>
-                                <input type="text" class="form-control" value="" name="question[1]['title']" required placeholder="Введите текст вопроса">
+                                <input type="text" class="form-control" value="" name="question[1]['title']" required
+                                       placeholder="Введите текст вопроса">
                             </div>
                         </div>
                         <div class="item" id="container_answer_1">
@@ -72,8 +109,11 @@
                 </div>
             </form>
         </div>
+
+        <div class="mx-auto block-window"></div>
     </div>
 
+    <div class="d-none" id="list_category">{{ categories_json }}</div>
 
     <script>
         $(document).ready(function () {
