--- a/templates/adminer/base.html
+++ b/templates/adminer/base.html
@@ -23,8 +23,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item" data-name="main">
-                <a class="nav-link" href="{% url 'adminer:home' %}">Опросы <span class="sr-only">(current)</span></a>
+            <li class="nav-item" data-name="polls">
+                <a class="nav-link" href="{% url 'adminer:polls' %}">Опросы <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" data-name="pattern">
                 <a class="nav-link" href="{% url 'adminer:pattern' %}">Шаблоны анкет <span class="sr-only">(current)</span></a>
