--- a/templates/adminer/pattern/pattern_create.html
+++ b/templates/adminer/pattern/pattern_create.html
@@ -24,7 +24,7 @@
                     <tr>
                         <th scope="row">{{ category.id }}</th>
                         <td>{{ category.title }}</td>
-                        <td>
+                        <td style="display: inline-block; width: 110px;">
                             <a href="/admin/category/edit/{{ category.id }}" type="button" class="btn btn-primary" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
