--- a/templates/adminer/pattern/pattern.html
+++ b/templates/adminer/pattern/pattern.html
@@ -36,10 +36,10 @@
                         <td class="text-center">{{ pattern.date_created|date:'Y-m-d H:i'}}</td>
                         <td class="text-center">{{ pattern.date_update|date:'Y-m-d H:i' }}</td>
                         <td>
-                            <a href="/admin/pattern/edit/{{ pattern.id }}" type="button" class="btn btn-warning"><i
+                            <a href="/admin/pattern/edit/{{ pattern.id }}" type="button" class="btn btn-warning" title="Изменить"><i
                                     class="fas fa-edit"></i></a>
-                            <a href="/admin/pattern/delete/{{ pattern.id }}" type="button"
-                               class="btn btn-danger delete_pattern"><i class="far fa-trash-alt"></i></a>
+                            <a href="/admin/pattern/delete/{{ pattern.id }}" type="button" title="Удалить"
+                               class="btn btn-danger delete_pattern delete_item"><i class="far fa-trash-alt"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
