--- a/templates/auth/auth.html
+++ b/templates/auth/auth.html
@@ -8,7 +8,7 @@
 
 <div class="d-flex">
     <div class="mx-auto">
-        <h1 class="text-center">Авторизация</h1>
+        <h1 class="text-center" style="margin-top: 50px;">Авторизация</h1>
         {% if error %}
             <div class="alert alert-danger" role="alert">
                 {{ error }}
